[package]
name = "mlua-isle"
version = "0.4.0"
edition = "2021"
rust-version = "1.77"
description = "Thread-isolated Lua VM with cancellation, async coroutines, and connection pool for mlua"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura"]
repository = "https://github.com/ynishi/mlua-isle"
homepage = "https://github.com/ynishi/mlua-isle"
keywords = ["lua", "mlua", "thread", "async", "pool"]
categories = ["concurrency", "api-bindings"]
readme = "README.md"

[features]
default = []
pool = []
tokio = ["dep:tokio", "mlua/async"]

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
